[gd_scene load_steps=2 format=3 uid="uid://myhw4sfk3san"]

[ext_resource type="Script" path="res://favorite_subject.gd" id="1_hngum"]

[node name="Favorite subject" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hngum")

[node name="btnA" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 359.0
offset_right = 283.0
offset_bottom = 429.0
text = "A"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 370.0
offset_top = 453.0
offset_right = 608.0
offset_bottom = 523.0
text = "Clear"

[node name="btnB" type="Button" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 453.0
offset_right = 277.0
offset_bottom = 523.0
text = "B"

[node name="btnC" type="Button" parent="."]
layout_mode = 0
offset_left = 371.0
offset_top = 351.0
offset_right = 609.0
offset_bottom = 421.0
text = "c"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 288.0
offset_top = 173.0
offset_right = 526.0
offset_bottom = 259.0
text = "
"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 305.0
offset_top = 59.0
offset_right = 543.0
offset_bottom = 163.0
text = "My Favorite Subject Is? 
A: English 
B: Math 
C: History
"

[connection signal="pressed" from="btnA" to="." method="_on_btn_a_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnB" to="." method="_on_btn_b_pressed"]
[connection signal="pressed" from="btnC" to="." method="_on_btn_c_pressed"]
